<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/ericamaguglianiunsplash">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:id="@+id/titleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/meteo_valtellina"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/titleContainer"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bormioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/bormio"
                    android:textColor="@color/white"
                    app:icon="@drawable/logobormio"
                    app:iconTintMode="multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/valfurvaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/valfurva"
                    android:textColor="@color/white"
                    app:icon="@drawable/logovalfurva"
                    app:iconTintMode="multiply"
                    app:strokeColor="#00FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/valdisottoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/valdisotto"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:icon="@drawable/logovaldisotto"
                    app:iconTintMode="multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/valdidentroButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/valdidentro"
                    android:textColor="@color/white"
                    app:icon="@drawable/logovaldidentro"
                    app:iconTintMode="multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/livignoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/livigno"
                    android:textColor="@color/white"
                    app:icon="@drawable/logolivigno"
                    app:iconTintMode="multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sondaloButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/sondalo"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:icon="@drawable/logosondalo"
                    app:iconTintMode="multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/linearbgrounded"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sondrioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linearbgrounded"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/sondrio"
                    android:textColor="@color/white"
                    app:icon="@drawable/logosondrio"
                    app:iconTintMode="multiply" />

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-9907554154077581/5165075814">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>